# vsportable

./: package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: README.md  lib.rs  main.rs  vsinstall.rs
src/components/: Desktop.tsx  ProgressBar.tsx  RecycleBin.tsx  Taskbar.tsx  VSInstall.tsx  VSUpdate.tsx  XP.module.css
