[package]
name = "vsportable"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vsportable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0"
dirs = "5.0.1"
reqwest = "0.12.8" 
futures-util = "0.3.31"
tokio = { version = "1.40.0", features = ["fs", "full"] }
thiserror = "1.0.64"
async-compression = { version = "0.4.15", features = ["deflate", "tokio"] }
async_zip = { version = "0.0.17", features = ["full"] }
